--- a/builds/e2e/templates/deploy-iotuap.yaml
+++ b/builds/e2e/templates/deploy-iotuap.yaml
@@ -1,6 +1,11 @@
 parameters:
   testName: ''
   release.label: ''
+  test.buildNumber: ''
+  test.buildId: ''
+  build.source.branch: ''
+  edgelet.source.branch: ''
+  images.source.branch: ''
   edgelet.artifact.name: ''
   images.artifact.name: ''
   container.registry: ''
@@ -27,6 +32,7 @@ parameters:
   twinTester.twinUpdateSize: ''
   twinTester.twinUpdateFrequency: ''
   twinTester.twinUpdateFailureThreshold: ''
+  hostPlatform: ''
 
 steps:
   - task: CopyFiles@2
@@ -75,6 +81,24 @@ steps:
       UserPassword: '$(iotuap-x64-password)'
       InlineScript: |
         #Requires -RunAsAdministrator
+        If ("${{ parameters['testName'] }}" -eq "Stress")
+        {
+          # schedule a task to stop iotedge service (terminate the test) in 4:30h
+          $ScheduleDatetime = [DateTime]::Now.AddMinutes(270)
+          $ScheduleDate=$ScheduleDatetime.ToString("MM/dd/yyyy")
+          $ScheduleTime=$ScheduleDatetime.ToString("HH:mm")
+          Write-Host "Schedule to stop iotedge service at $ScheduleDate $ScheduleTime"
+          SchTasks.exe /Create /RU "SYSTEM" /SC ONCE /TN “StopStressTest” /TR "net stop iotedge" /SD $ScheduleDate /ST $ScheduleTime /F
+        }
+        
+        $testInfo="TestBuildNumber=${{ parameters['test.buildNumber'] }}"
+        $testInfo=$testInfo+",TestBuildId=${{ parameters['test.buildId'] }}"
+        $testInfo=$testInfo+",BuildSourceBranch=${{ parameters['build.source.branch'] }}"
+        $testInfo=$testInfo+",EdgeletSourceBranch=${{ parameters['edgelet.source.branch'] }}"
+        $testInfo=$testInfo+",ImagesSourceBranch=${{ parameters['images.source.branch'] }}"
+        $testInfo=$testInfo+",HostPlatform=${{ parameters['hostPlatform'] }}"
+        $testInfo=$testInfo+",TestName=${{ parameters['testName'] }}"
+        
         $ArtifactInfo=convertfrom-stringdata (get-content C:\Data\e2etests\artifacts\${{ parameters['images.artifact.name'] }}\artifactInfo.txt -raw)
         C:\Data\e2etests\artifacts\${{ parameters['images.artifact.name'] }}\scripts\windows\test\Run-E2ETest.ps1 `
           -E2ETestFolder "C:\Data\e2etests" `
@@ -105,5 +129,7 @@ steps:
           -TwinUpdateSize "${{ parameters['twinTester.twinUpdateSize'] }}" `
           -TwinUpdateFrequency "${{ parameters['twinTester.twinUpdateFrequency'] }}" `
           -TwinUpdateFailureThreshold "${{ parameters['twinTester.twinUpdateFailureThreshold'] }}" `
+          -HostPlatform "${{ parameters['hostPlatform'] }}" `
+          -TestInfo "$testInfo" `
           -BypassEdgeInstallation
       CommunicationProtocol: Http
