--- a/mqtt/mqtt-broker/Cargo.toml
+++ b/mqtt/mqtt-broker/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2018"
 async-trait = "0.1"
 bincode = "1.2"
 failure = "0.1"
+flate2 = "1.0"
 futures-util = { version = "0.3", features = ["sink"] }
 lazy_static = "1"
 serde = { version = "1.0", features = ["derive", "rc"] }
