--- a/mqtt/mqtt-broker/Cargo.toml
+++ b/mqtt/mqtt-broker/Cargo.toml
@@ -11,14 +11,18 @@ async-trait = "0.1"
 bincode = "1.2"
 chrono = "0.4"
 fail = "0.3"
-failure = "0.1"
 flate2 = "1.0"
+bytes = "0.5.4"
+failure = "0.1"
+futures = "0.3"
 futures-util = { version = "0.3", features = ["sink"] }
 lazy_static = "1"
 serde = { version = "1.0", features = ["derive", "rc"] }
 tokio = { version = "0.2", features = ["blocking", "stream", "sync", "tcp"] }
 tokio-io-timeout = "0.4"
 tokio-util = { version = "0.2", features = ["codec"] }
+tokio-tls = "0.3"
+native-tls = "0.2"
 tracing = "0.1"
 tracing-futures = "0.2"
 uuid = { version = "0.8", features = ["v4"] }
