--- a/mqtt/mqttd/Cargo.toml
+++ b/mqtt/mqttd/Cargo.toml
@@ -7,8 +7,11 @@ edition = "2018"
 [dependencies]
 atty = "0.2"
 failure = "0.1"
+futures = "0.3"
 futures-util = { version = "0.3", features = ["sink"] }
-tokio = { version = "0.2", features = ["dns", "macros", "rt-threaded", "signal", "stream", "tcp", "time"] }
+tokio = { version = "0.2", features = ["dns", "macros", "rt-threaded", "signal", "stream", "tcp", "time", "fs"] }
+tokio-tls = "0.3"
+native-tls = "0.2"
 tracing = "0.1"
 tracing-subscriber = "0.1"
 
