--- a/builds/e2e/templates/e2e-setup.yaml
+++ b/builds/e2e/templates/e2e-setup.yaml
@@ -18,10 +18,6 @@ steps:
       TestRootCaKey,
       TestRootCaPassword
 
-# - download: images
-#   artifact: '$(az.pipeline.images.artifacts)'
-#   patterns: '$(az.pipeline.images.artifacts)/artifactInfo.txt'
-
 - task: DownloadBuildArtifacts@0
   displayName: Get Docker image info
   inputs:
@@ -34,33 +30,16 @@ steps:
     artifactName: $(az.pipeline.images.artifacts)
     itemPattern: $(az.pipeline.images.artifacts)/artifactInfo.txt
 
-# - download: packages
-#   artifact: '$(artifactDir)'
-#   patterns: '$(artifactDir)/*'
-
-# - task: DownloadBuildArtifacts@0
-#   displayName: Download edgelet packages
-#   inputs:
-#     buildType: specific
-#     project: one
-#     pipeline: $(az.pipeline.packages)
-#     buildVersionToDownload: $(whichPackageBuild)
-#     branchName: refs/heads/master
-#     buildId: $(packageBuildId)
-#     downloadType: specific
-#     itemPattern: $(artifactDir)/*
-
-# - task: DownloadBuildArtifacts@0
-#   displayName: Get Docker image info
-#   inputs:
-#     buildType: specific
-#     project: one
-#     pipeline: $(az.pipeline.images)
-#     buildVersionToDownload: $(whichImageBuild)
-#     branchName: refs/heads/master
-#     buildId: $(imageBuildId)
-#     downloadType: specific
-#     itemPattern: $(az.pipeline.images.artifacts)/artifactInfo.txt
+- task: DownloadBuildArtifacts@0
+  displayName: Download edgelet packages
+  inputs:
+    buildType: specific
+    project: $(resources.pipeline.packages.projectID)
+    pipeline: $(resources.pipeline.packages.pipelineName)
+    buildVersionToDownload: specific
+    buildId: $(resources.pipeline.packages.runID)
+    downloadType: single
+    artifactName: $(az.pipeline.images.artifacts)
 
 - pwsh: |
     $certsDir = '$(System.ArtifactsDirectory)/certs'
